yaml/gateway/1gate-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: secure-gateway
  namespace: web-ns
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: ingress.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - name: ingress-tls-secretname
