yaml/gateway/2http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-route
  namespace: web-ns
spec:
  parentRefs:
  - name: secure-gateway
  hostnames:
  - ingress.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ingresss-path
    backendRefs:
    - name: ingress-svc
      port: 8080
