yaml/gateway/4http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-route
  namespace: routing-ns
spec:
  parentRefs:
  - name: route-gateway
  hostnames:
  - route.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app
        User-Agent: mobile
    backendRefs:
    - name: mobile-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /app
    backendRefs:
    - name: desktop-svc
      port: 80
